--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,7 +12,7 @@ add_executable(test_cons_hash
     "./test_consistent_hash.cpp"
     "../src/consistent_hash/consistent_hash.cpp"
 )
-target_link_libraries(test_cons_hash GTest::gtest_main fmt::fmt)
+target_link_libraries(test_cons_hash GTest::gtest_main fmt::fmt spdlog::spdlog)
 
 # 测试 cache group
 add_executable(test_group
