feat: Implement KCache client SDK and server
- Added KCacheClient class for client-side operations including Get, Set, Delete, and Invalidate methods.
- Created KCacheServer class to handle gRPC requests for cache operations.
- Removed the HTTP gateway implementation as part of the refactor.
- Updated CMakeLists to include new source files and link necessary libraries.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,11 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # 设置可执行文件输出目录为 build/bin
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 
 # 头文件位置：
-include_directories(${CMAKE_SOURCE_DIR}/src/include # src/include 项目通用头文件
-                    ${CMAKE_SOURCE_DIR}/src/proto) # src/proto 生成的 proto 和 grpc
+include_directories(${CMAKE_SOURCE_DIR}/src/include # src/include 项目内部头文件
+                    ${CMAKE_SOURCE_DIR}/src/proto)  # src/proto 生成的 proto 和 grpc
 
 # 查找依赖
 find_package(GTest CONFIG REQUIRED)
@@ -25,3 +25,4 @@ find_package(nlohmann_json CONFIG REQUIRED)
 
 add_subdirectory(src)
 add_subdirectory(test)
+add_subdirectory(example)
